@@ -1,3 +1,6 @@
+2006-12-16 Added ability to turn control scientific notation
+           in ScalarFormatter - EF
+
 2006-12-16 Enhanced boxplot to handle more flexible inputs - EF
 
 2006-12-13 Replaced calls to where() in colors.py with much faster
